# Minesweeper

./: CMakeLists.txt  CMakePresets.json  Game.cpp  Game.h  Grid.cpp  Grid.h  README.md  Random.cpp  Random.h  main.cpp
cmake/: FindSFML.cmake
images/: Thumbs.db  tiles.psd
include/: Cell.h  Game.h
src/: Cell.cpp  Game.cpp
